force-app/main/default/objects/Team_Research__c/Team_Research__c.object-meta.xml
<CustomObject>
    <label>Team Research</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Research ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Research</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>