force-app/main/default/objects/Team_Research__c/fields/Key_Factors__c.field-meta.xml
<CustomField>
    <fullName>Key_Factors__c</fullName>
    <label>Key Factors</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>