force-app/main/default/objects/Team_Research__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <label>Raw Response</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>