force-app/main/default/objects/Team_Research__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <description>Score from -100 to 100</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>