force-app/main/default/objects/Team_Research__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Statistics</fullName>
            </value>
            <value>
                <fullName>Injury Report</fullName>
            </value>
            <value>
                <fullName>Expert Pick</fullName>
            </value>
            <value>
                <fullName>Conference Tournament</fullName>
            </value>
            <value>
                <fullName>General Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>