force-app/main/default/objects/Team_Research__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>MasterDetail</type>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Research Records</relationshipLabel>
    <relationshipName>Research_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>